--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "date-fns": "^4.1.0",
     "dotenv": "^16.4.5",
     "gantt-task-react": "^0.3.9",
+    "lowdash": "^1.2.0",
     "lucide-react": "^0.460.0",
     "next": "15.0.3",
     "numeral": "^2.0.6",
@@ -30,6 +31,7 @@
     "redux-persist": "^6.0.0"
   },
   "devDependencies": {
+    "@types/lodash": "^4.17.15",
     "@types/node": "^20.17.6",
     "@types/numeral": "^2.0.5",
     "@types/react": "^18",
